W-18329891: Do not use AbstractMuleContextTestCase for tests just requiring DW